tests/test2/fail/fail-matrixAccess.m2
int main(){
	int m;
	m[0][0] = 1;
	
	return 0;
}